fix layout for about page on larger screens, have text wrap under image and span

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ body::before {
   margin-top: 4rem;
   font-family: 'Oswald', sans-serif;
   font-weight: 300;
-  padding-bottom: 7%;
   letter-spacing: 0.2vw; }
 
 .about-content span {
@@ -47,7 +46,8 @@ body::before {
   font-size: 1.6rem;
   margin-top: 1.4rem;
   text-transform: uppercase;
-  text-align: left; }
+  text-align: left;
+  margin-bottom: 3%; }
   .about-paragraph-bonus {
     margin-top: 2%; }
 
@@ -88,8 +88,7 @@ body::before {
 
 @media screen and (min-width: 46.25em) {
   .about-img-text-container {
-    flex-direction: row;
-    align-items: flex-start; }
+    flex-direction: row; }
   #about-info .container {
     padding: 3%;
     display: flex;
@@ -110,7 +109,9 @@ body::before {
     margin-right: 10%;
     margin-top: 4rem; }
   .about-skills {
-    font-size: 1.6rem; } }
+    font-size: 1.6rem; }
+  .about-content__paragraph {
+    margin-top: 3%; } }
 
 @media screen and (min-width: 55em) {
   #about-info .container {
